--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -1,9 +1,8 @@
 .front-page-image {
-  border: 2px solid black;
-  background-image: url(../images/nightvibe.png);
+  background-image: url(../images/fancyPlate.webp);
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 500px;
-  margin-top: 100px;
+  height: 600px;
+  margin-top: 15px;
 }
