--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -1,8 +1,21 @@
 .front-page-image {
-  background-image: url(../images/fancyPlate.webp);
+  background-image: url(../images/steakWithFork.png);
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 600px;
-  margin-top: 15px;
+  height: 700px;
+  position: relative;
+}
+
+.front-page-image figcaption {
+  font-size: 60px;
+  color: #f5e9e2;
+  text-shadow: 1px 3px 5px #0b090a;
+  text-align: center;
+  font-family: Bradley Hand, cursive;
+}
+
+#newResLink {
+  position: absolute;
+  bottom: 20px;
 }
