--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -3,19 +3,17 @@
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 700px;
+  height: 100vh;
   position: relative;
 }
 
-.front-page-image figcaption {
-  font-size: 60px;
-  color: #f5e9e2;
-  text-shadow: 1px 3px 5px #0b090a;
-  text-align: center;
-  font-family: Bradley Hand, cursive;
+nav {
+  width: 100%;
+  padding: 20px 0;
 }
 
-#newResLink {
-  position: absolute;
-  bottom: 20px;
+.logo {
+  width: 150px;
+  margin: 20px 0;
+  cursor: pointer;
 }
