--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -3,17 +3,34 @@
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   position: relative;
 }
 
 nav {
   width: 100%;
   padding: 20px 0;
+  text-align: center;
 }
 
 .logo {
   width: 150px;
   margin: 20px 0;
   cursor: pointer;
+}
+
+nav.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 10px 8%;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: padding 1s;
+}
+
+nav.sticky .menu-icon {
+  width: auto;
 }
