--- a/front-end/src/css/menus.css
+++ b/front-end/src/css/menus.css
@@ -9,7 +9,17 @@
   margin: 10px 0 10px 10px;
 }
 
-.menu-icon:hover,
+.menu-icon {
+  background: #000;
+  width: 100%;
+  margin-top: 10px;
+  padding: 3px;
+}
+
+.menu-icon svg {
+  width: 20px;
+}
+
 .menu-icon svg:hover {
   fill: aqua;
 }
@@ -18,7 +28,7 @@
   display: none;
 }
 
-.menu-icon:hover .sub-menu {
+.menu-icon svg:hover .sub-menu {
   display: block;
   position: absolute;
   background: blue;
