--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -11,7 +11,14 @@ nav {
   width: 100%;
   padding: 20px 0;
   text-align: center;
+  z-index: 1000;
+  position: absolute;
 }
+
+/* #navbar {
+  z-index: 1000;
+  position: absolute;
+} */
 
 .logo {
   width: 150px;
@@ -19,7 +26,7 @@ nav {
   cursor: pointer;
 }
 
-nav.sticky {
+.sticky {
   position: fixed;
   top: 0;
   left: 0;
