--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -3,30 +3,24 @@
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 95vh;
-  position: relative;
+  height: 93vh;
+  position: static;
 }
 
-nav {
+/* nav {
   width: 100%;
   padding: 20px 0;
   text-align: center;
-  z-index: 1000;
-  position: absolute;
-}
-
-/* #navbar {
   z-index: 1000;
   position: absolute;
 } */
 
 .logo {
   width: 150px;
-  margin: 20px 0;
   cursor: pointer;
 }
 
-.sticky {
+/* .sticky {
   position: fixed;
   top: 0;
   left: 0;
@@ -36,8 +30,8 @@ nav {
   align-items: center;
   justify-content: space-between;
   transition: padding 1s;
-}
+} */
 
-nav.sticky .menu-icon {
+/* nav.sticky .menu-icon {
   width: auto;
-}
+} */
