--- a/front-end/src/css/menus.css
+++ b/front-end/src/css/menus.css
@@ -1,23 +1,2 @@
-.menu {
-  background-color: blueviolet;
-}
-
-.menu-logo {
-  background-color: blueviolet !important;
-  width: 180px;
-  height: 50px;
-  margin: 10px 0 10px 10px;
-}
-
-.menu-icon {
-  background: #000;
-  width: 100%;
-  margin-top: 10px;
-  padding: 3px;
-}
-
-/* .navbar {
-  background-color: #201e1e80;
-  box-shadow: 1px 1px 1px black;
-  z-index: 1;
+/* .how {
 } */
