--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -7,6 +7,19 @@
   position: static;
 }
 
+.pop-up-image {
+  background-image: url(../images/menulist.png);
+  /* background-position: center; */
+  /* background-size: cover; */
+  width: 100%;
+  height: 93vh;
+  /* position: static; */
+}
+
+.newnew {
+  width: 5000px;
+}
+
 /* nav {
   width: 100%;
   padding: 20px 0;
@@ -14,6 +27,11 @@
   z-index: 1000;
   position: absolute;
 } */
+
+.hello {
+  background-image: url(../images/stock-photo-art-concrete-texture-for-background-in-black-grey-and-white-colors-298514801-1.jpg);
+  background-color: blue;
+}
 
 .logo {
   width: 150px;
