--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -1,5 +1,5 @@
 .front-page-image {
-  background-image: url(../images/steakWithFork.png);
+  background-image: url(../images/darkSteak.png);
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -7,13 +7,19 @@
   position: static;
 }
 
+.vibe-image {
+  background-image: url(../images/nightvibe.png);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 80vh;
+  position: static;
+}
+
 .pop-up-image {
   background-image: url(../images/menulist.png);
-  /* background-position: center; */
-  /* background-size: cover; */
   width: 100%;
   height: 93vh;
-  /* position: static; */
 }
 
 .newnew {
@@ -30,7 +36,6 @@
 
 .hello {
   background-image: url(../images/stock-photo-art-concrete-texture-for-background-in-black-grey-and-white-colors-298514801-1.jpg);
-  background-color: blue;
 }
 
 .logo {
