--- a/front-end/src/css/menus.css
+++ b/front-end/src/css/menus.css
@@ -1,3 +1,20 @@
 .menu {
-  margin-top: 20vh;
+  margin-top: 10vh;
+}
+
+.menu h2 {
+  font-size: 40px;
+}
+
+.google-map {
+  width: 60vw;
+}
+
+.book-button {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.footer {
+  height: 50px;
 }
