--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -8,11 +8,10 @@
 }
 
 .vibe-image {
-  background-image: url(../images/nightvibe.png);
+  background-image: url(../images/firepic.png);
   background-position: center;
   background-size: cover;
-  width: 100%;
-  height: 80vh;
+  height: 90vh;
   position: static;
 }
 
@@ -34,8 +33,8 @@
   position: absolute;
 } */
 
-.hello {
-  background-image: url(../images/stock-photo-art-concrete-texture-for-background-in-black-grey-and-white-colors-298514801-1.jpg);
+.navshadow {
+  box-shadow: 0px 1px 10px 2px #909090;
 }
 
 .logo {
