--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -53,6 +53,15 @@
   height: 93vh;
 }
 
+.imgStreetView {
+  background-image: url(../images/StreatView.png);
+  background-position: center;
+  background-size: cover;
+  height: 450px;
+  position: static;
+  width: 600px;
+}
+
 .newnew {
   width: 5000px;
 }
