--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -1,7 +1,8 @@
 .front-page-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/darkSteak.png);
-  background-position: center;
+  /* background-position: center; */
+  background-position: 50% 91%;
   background-size: cover;
   width: 100%;
   height: 90vh;
@@ -73,4 +74,8 @@
 .logo {
   width: 150px;
   cursor: pointer;
+}
+.red-button {
+  background-color: #ba131a;
+  /* color: white; */
 }
