--- a/front-end/src/css/dashboard.css
+++ b/front-end/src/css/dashboard.css
@@ -1,8 +1,8 @@
 .front-page-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(../images/darkSteak.png);
   /* background-position: center; */
-  background-position: 50% 91%;
+  background-position: 50% 90%;
   background-size: cover;
   width: 100%;
   height: 90vh;
@@ -79,3 +79,35 @@
   background-color: #ba131a;
   /* color: white; */
 }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 40px;
+  width: 40px;
+  /* fill: "%50fff" !important; */
+}
+
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+  opacity: 0.5;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  color: rgba(0, 0, 0, 0);
+  opacity: 1;
+  display: block;
+  background-image: url(../images/caret-down.png);
+  width: 11px;
+  height: 11px;
+  border-width: thin;
+}
+
+/* select.m option {
+  display: none;
+}
+
+select.m option:nth-child(16),
+select.m option:nth-child(31),
+select.m option:nth-child(46) {
+  display: block;
+} */
