--- a/front-end/src/css/menus.css
+++ b/front-end/src/css/menus.css
@@ -29,8 +29,8 @@ hr.style-two {
 }
 
 .footer {
-  height: 60px;
-  background-color: #f3f5f7;
+  height: 100px;
+  background-color: #3e3c3d;
   margin-top: 40px;
 }
 
