--- a/front-end/src/css/index.css
+++ b/front-end/src/css/index.css
@@ -1,4 +1,8 @@
-/* .starterdiv {
-  position: absolute;
-  margin-top: 300px;
-} */
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
